--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,6 @@ dependencies {
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation group: 'com.google.android.material', name: 'material', version: '1.3.0-alpha01'
 }
