--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,4 +144,7 @@ dependencies {
     implementation "com.github.skydoves:landscapist-glide:2.0.0"
 
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    //swipe Refresh
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.26.3-beta"
 }
