--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,7 +136,7 @@ dependencies {
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.6.0'
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.2.1'
+    implementation 'androidx.compose.material:material:1.4.0-alpha01'
     // Animations
     implementation 'androidx.compose.animation:animation:1.2.1'
     // Tooling support (Previews, etc.)
