--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,28 +99,21 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
 
-    def okhttp3_version = '3.10.0'
+    def okhttp3_version = '4.9.3'
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
 
-    def rxJavaVersion = '2.2.19'
-    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    implementation "io.reactivex.rxjava2:rxkotlin:$rxJavaVersion"
-
-    def rxKotlinVersion = '2.4.0'
-    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
-
-    def rxandroidVersion = '2.1.1'
-    implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
-
-    def retrofit_rxjava_adapter_version = '1.0.0'
-    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$retrofit_rxjava_adapter_version"
-
     implementation "com.google.code.gson:gson:2.9.1"
+
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
+    // Kotlin Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     def paging_version = "3.1.1"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha17'
 
     // glide compose
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
@@ -131,12 +124,12 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation group: 'com.google.android.material', name: 'material', version: '1.8.0-alpha01'
+    implementation group: 'com.google.android.material', name: 'material', version: '1.8.0-beta01'
 
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.4.0-alpha01'
+    implementation 'androidx.compose.material:material:1.4.0-alpha03'
     // Animations
     implementation 'androidx.compose.animation:animation:1.2.1'
     // Tooling support (Previews, etc.)
